--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,6 +1,6 @@
-/* Thêm vào file CSS của bạn */
+
 .breadcrumb {
-    background-color: #7ca19e; /* Màu nền xám nhạt */
+    background-color: #7ca19e; 
     padding: 0.75rem 1rem;
     border-radius: 0.25rem;
     font-size: 0.9rem;
